--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
           </div>
         </div>
       </div>
-      <div float:right class="mapouter"><div class="gmap_canvas"><iframe width="426" height="288" id="gmap_canvas" src="https://maps.google.com/maps?q=Beytepe%20Mahallesi%2C%20Officium%20Beytepe%2C%20Kanuni%20Sultan%20S%C3%BCleyman%20Blv%2C%2006800%20%C3%87ankaya%2FAnkara%2C%20T%C3%BCrkiye&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de"></a></div><style>.mapouter{position:middle;text-align:right;height:288px;width:800;}.gmap_canvas {overflow:hidden;background:none!important;height:288px;width:925px;}</style></div>
+      <div float:right class="mapouter"><div class="gmap_canvas"><iframe width="426" height="288" id="gmap_canvas" src="https://maps.google.com/maps?q=Beytepe%20Mahallesi%2C%20Officium%20Beytepe%2C%20Kanuni%20Sultan%20S%C3%BCleyman%20Blv%2C%2006800%20%C3%87ankaya%2FAnkara%2C%20T%C3%BCrkiye&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de"></a></div><style>.mapouter{position:relative;text-align:relative;height:288px;width:800;}.gmap_canvas {overflow:hidden;background:none!important;height:288px;width:925px;}</style></div>
     </section>
 		
     
