--- a/contact.html
+++ b/contact.html
@@ -72,17 +72,16 @@
             <p><span>Adres:</span> Officium Beytepe, Beytepe Mh. Kanuni Sultan Süleyman Bulvarı, 5314. Cadde, No. 4, A Blok, Daire 78, Çankaya Ankara</p>
           </div>
           <div class="col-md-3">
-            <p><span>Telefon:</span> <a href="tel://03125038822">0312 503 88 22</a></p>
+            <p><b><span>Telefonlar:</span></b> <p> 0534 660 6926 </p> 0312 503 88 22</p>
           </div>
           <div class="col-md-3">
-            <p><span>E-posta:</span> <a href="mailto:eminegulkapci@gmail.com">eminegulkapci@gmail.com</a></p>
+            <p><b><span>E-posta:</span> </b><a href="mailto:egkapci@gmail.com">egkapci@gmail.com</a></p>
           </div>
           <div class="col-md-3">
-            <p><span>Website:</span> <a href="#">eminegulkapci.github.io</a></p>
+            <p><b><span>Website:</span></b> <a href="#">www.eminegulkapci.com</a></p>
           </div>
         </div>
       </div>
-      <div float:right class="mapouter"><div class="gmap_canvas"><iframe width="426" height="288" id="gmap_canvas" src="https://maps.google.com/maps?q=Beytepe%20Mahallesi%2C%20Officium%20Beytepe%2C%20Kanuni%20Sultan%20S%C3%BCleyman%20Blv%2C%2006800%20%C3%87ankaya%2FAnkara%2C%20T%C3%BCrkiye&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de"></a></div><style>.mapouter{position:relative;text-align:relative;height:288px;width:800;}.gmap_canvas {overflow:hidden;background:none!important;height:288px;width:925px;}</style></div>
     </section>
 		
     
