--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="container">
           <div class="row d-flex no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
           	<div class="one-third order-md-last img js-fullheight" style="background-image:url(images/bg_2.jpg);">
-          		<h3 class="vr">1964'den beri</h3>
+          		<h3 class="vr">Psikolojik Destek</h3>
           	</div>
 	          <div class="one-forth d-flex js-fullheight align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 	          	<div class="text">
